force-app/main/default/objects/CEC_Attendees__c/CEC_Attendees__c.object-meta.xml
<CustomObject>
    <description>This is the child object of CEC meeting which hold the details about the attendees who will be part of a specific CEC meeting like Name, phone number, email id, title etc.</description>
    <label>Attendee</label>
    <nameField>
        <displayFormat>Attendee - {000}</displayFormat>
        <label>CEC Attendees Name</label>
        
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CEC Attendees</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>