force-app/main/default/objects/CEC_Attendees__c/fields/Attendee_Name_Contact__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacts in Salesforce</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CEC Attendees</relationshipLabel>
    <relationshipName>CEC_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>