force-app/main/default/objects/CEC_Attendees__c/fields/Attendee_Name_External__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name_External__c</fullName>
    <label>Contacts not in Salesforce</label>
    <length>100</length>
    <type>Text</type>
</CustomField>