force-app/main/default/objects/CEC_Attendees__c/fields/Attendee_Name_Internal__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name_Internal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCR Employee in Salesforce</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>