force-app/main/default/objects/CEC_Attendees__c/fields/Cec_Attendee_link__c.field-meta.xml
<CustomField>
    <fullName>Cec_Attendee_link__c</fullName>
    <formula>IF( ISBLANK( Attendee_Name_Internal__c) , &apos;&apos;, HYPERLINK(&quot;/&quot; &amp; Id ,Attendee_Name_Internal__r.FirstName &amp; &apos; &apos; &amp; Attendee_Name_Internal__r.LastName)) &amp;

IF( ISBLANK( Attendee_Name_External__c) , &apos;&apos;, HYPERLINK(&quot;/&quot; &amp; Id ,Attendee_Name_External__c)) &amp;
IF( ISBLANK( Non_Sf_NCR__c) , &apos;&apos;, HYPERLINK(&quot;/&quot; &amp; Id ,Non_Sf_NCR__c)) &amp;


IF( ISBLANK( Attendee_Name_Contact__c) , &apos;&apos;, HYPERLINK(&quot;/&quot; &amp; Id ,Attendee_Name_Contact__r.Full_Name__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cec Attendee link</label>
    <type>Text</type>
</CustomField>