force-app/main/default/objects/CEC_Attendees__c/fields/CEC_Meeting__c.field-meta.xml
<CustomField>
    <fullName>CEC_Meeting__c</fullName>
    <label>CEC Meeting</label>
    <referenceTo>CEC__c</referenceTo>
    <relationshipName>CEC_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>