force-app/main/default/objects/CEC_Attendees__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>TextArea</type>
</CustomField>