force-app/main/default/objects/CEC_Attendees__c/fields/Company_Strategic_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Company_Strategic_Priorities__c</fullName>
    <label>Company Strategic Priorities</label>
    <length>100</length>
    <type>Text</type>
</CustomField>