force-app/main/default/objects/CEC_Attendees__c/fields/Is_Non_Sf_NCR__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Sf_NCR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Salesforce NCR Employee</label>
    <type>Checkbox</type>
</CustomField>