force-app/main/default/objects/CEC_Attendees__c/fields/Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Meeting_ID__c</fullName>
    <formula>CEC_Meeting__r.CEC_Meeting_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting ID</label>
    <type>Text</type>
</CustomField>