force-app/main/default/objects/CEC_Attendees__c/fields/Non_Sf_NCR__c.field-meta.xml
<CustomField>
    <fullName>Non_Sf_NCR__c</fullName>
    <label>Non Salesforce NCR Employee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>