force-app/main/default/objects/CEC_Attendees__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>