force-app/main/default/objects/CEC_Attendees__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF( ISBLANK(Attendee_Name_Internal__c) ,&apos;&apos;,&apos;Internal&apos;) &amp; IF( ISBLANK( Attendee_Name_External__c ) , &apos;&apos;,&apos;External&apos;) &amp; IF( ISBLANK( Non_Sf_NCR__c ) , &apos;&apos;,&apos;Internal&apos;) &amp; IF( ISBLANK( Attendee_Name_Contact__c ) ,&apos;&apos;,&apos;Contact&apos;) &amp; IF( ISBLANK( Attendee_Name_Lead__c ) , &apos;&apos;,&apos;Lead&apos;)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>