force-app/main/default/objects/CEC_Attendees__c/recordTypes/Attendee_Contact.recordType-meta.xml
<RecordType>
    <fullName>Attendee_Contact</fullName>
    <active>true</active>
    <description>Customer already in Salesforce.com contact records</description>
    <label>Contacts in Salesforce</label>
</RecordType>