force-app/main/default/objects/CEC_Attendees__c/recordTypes/Attendee_External.recordType-meta.xml
<RecordType>
    <fullName>Attendee_External</fullName>
    <active>true</active>
    <description>Customer contact not in the Salesforce.com contact records</description>
    <label>Contacts not in Salesforce</label>
</RecordType>