force-app/main/default/objects/CEC_Attendees__c/recordTypes/Attendee_Internal.recordType-meta.xml
<RecordType>
    <fullName>Attendee_Internal</fullName>
    <active>true</active>
    <description>NCR employees</description>
    <label>NCR Employee in Salesforce</label>
</RecordType>