force-app/main/default/objects/CEC_Attendees__c/recordTypes/Attendee_Lead.recordType-meta.xml
<RecordType>
    <fullName>Attendee_Lead</fullName>
    <active>false</active>
    <description>NCR Sales contact</description>
    <label>Attendee Sales Lead</label>
</RecordType>